[package]
name = "safe-rs"
version = "0.1.0"
edition = "2021"
authors = ["Enrique Ortiz <e@pendrana.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pendrana/safe-rs"
description = "A wrapper around the Safe API"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
